Revert "#1572 - .fixedCount occurrences removed, fixed z-index for resize handlers + fixed textarea autoresize"
This reverts commit ae9f7c2f3f5999fada7057eb45228171f2c3d580.

--- a/demo/css/samples.css
+++ b/demo/css/samples.css
@@ -326,6 +326,7 @@ ul ul {
 .handsontable {
   margin-bottom: 10px;
   color: #000;
+  z-index: 2;
   font-size: 12px;
 }
 
